fix login button spacings

--- a/src/components/socialLoginButtons/index.css
+++ b/src/components/socialLoginButtons/index.css
@@ -5,6 +5,7 @@
 .googleIcon {
   height: 20px;
   margin-right: 10px;
+  width: 20px;
 }
 
 .googleLoginButton {
@@ -14,4 +15,5 @@
 .facebookIcon {
   height: 27px;
   margin-right: 10px;
+  width: 30px;
 }
